{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "SetUpAlgorithm",
            "id": "5d618b5b-b444-4c05-95c2-325d970cc629",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "dbf778ae-b756-4544-a323-f8437cc58791",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "8fd780ee-0507-4a15-b739-da8f54707ec3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "309ac41a-270e-4263-a1f4-e1650aadf5ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseAStartingVertex",
                    "type": "Button",
                    "id": "2921bbc9-fbbe-4bd9-8e27-151ef17e794c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c6ee6bd-6f40-4254-8517-4acbb9a53ed5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45851b4c-ba49-4dda-b6be-3cda698ee15b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91905d33-40e7-450b-bc3a-fa8cebd60374",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a9bd613-1eaf-42cc-a09b-920d5d881a83",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseAStartingVertex",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ShowcaseAlgorithm",
            "id": "7139e7b4-372c-45e6-8e28-805fa79b5f8d",
            "actions": [
                {
                    "name": "NextStep",
                    "type": "Button",
                    "id": "691a762a-4b16-4e47-b054-78aa277ef2b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevStep",
                    "type": "Button",
                    "id": "6f446b17-c9cf-47f8-bf8f-0846f1c79c54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "fc6a1c93-f078-4428-a953-c2003e73262a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1f35159-6447-4b25-a22f-ba47d884f2b2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextStep",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b45dcf6-0cad-4c21-bcd7-75c175a7e4a5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevStep",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef814894-33dc-49a2-8b6e-ae58daf108f1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}